use nicer looking colors for error/warning diagnostics

--- a/usr/var/www/callblocker/app.css
+++ b/usr/var/www/callblocker/app.css
@@ -17,9 +17,9 @@ html, body {
     background-color: #FF6666;
 }
 .errorRow .dojoxGridCell {
-    background-color: red;
+    background-color: #FF6666;
 }
 .warnRow .dojoxGridCell {
-    background-color: gold;
+    background-color: #FFFF66;
 }
 
