increase font size by 1px

--- a/usr/var/www/callblocker/app.css
+++ b/usr/var/www/callblocker/app.css
@@ -8,6 +8,9 @@ html, body {
   margin: 0;
   padding: 0;
   overflow: hidden;
+
+  font: 13px Helvetica,Myriad,Tahoma,Arial,clean,sans-serif;       
+  *font-size: 81.25%;
 }
 
 .whitelistRow .dojoxGridCell {
