fix: #68 rename whitelist/blacklist to allowlist/blocklist

--- a/usr/var/www/callblocker/src/app.css
+++ b/usr/var/www/callblocker/src/app.css
@@ -9,7 +9,7 @@ html, body {
   *font-size: 81.25%;
 }
 
-.whitelistRow .dojoxGridCell {
+.allowlistRow .dojoxGridCell {
     background-color: LightGreen;
 }
 .blockedRow .dojoxGridCell {
